# cancer-detective

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg  web.py
cgi_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
conf/: game.cfg  game.spec.cfg
game/: muts.ipynb  muts.py  muts_old_version.py  results.tsv
static/css/: about.css  about.sass  home.css  home.sass  play.css  play.sass  resources.css  results.css  results.sass  style.css  style.sass  utils.css  utils.sass
static/data/CGI/: Parse_biomarkers.ipynb  selected_biomarkers.csv  selected_biomarkers.tsv
static/data/biomart/: gene_description_biomart_20211217.txt  gene_description_biomart_20211217_reformat.txt
static/data/code/: create_mutations_db.ipynb  exposures_factors.json  general_questions.json  refactor_gene_description.ipynb
static/data/code/.ipynb_checkpoints/: create_mutations_db-checkpoint.ipynb
static/data/intogen/: intOGen-20191022_Negative_gene_set.tsv
static/images/: LICENSE
static/js/: home.js  play.js  resources.js  results.js  script.js  utils.js
templates/: about.html  base.html  error.html  game.html  home.html  layout.html  play.html  resources.html  results.html  utils.html
