[metadata]
name = cgi-game
version = 1.0.0
description = Cancer Genome Interpreter Game
long_description = README.md
url = https://github.com/bbglab/cgi-game
author = Barcelona Biomedical Genomics Lab
author_email = bbglab@irbbarcelona.org
license = "Apache 2.0"
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools
install_requires =
    cherrypy
    click
    configobj
    jinja2
    pandas

[options.entry_points]
console_scripts =
        play = game.muts:cli
